@@ -1,8 +1,12 @@
 // Top-level build file where you can add configuration options common to all sub-projects/modules.
 buildscript {
+    ext.kotlin_version = '1.5.0-M1'
     ext {
         compose_version = '1.0.0-beta02'
         kotlin_version = '1.4.31'
+        junit_version = '5.7.1'
+        junit_runner_version = '3.4.2'
+        mockk_version = '1.10.0'
     }
     repositories {
         google()
@@ -29,4 +33,9 @@ allprojects {
 
 task clean(type: Delete) {
     delete rootProject.buildDir
+}
+
+tasks.withType(Test) {
+    useJUnitPlatform()
+    jvmArgs '--enable-preview'
 }
